--- a/docs/_app/manifest.json
+++ b/docs/_app/manifest.json
@@ -1,115 +1,54 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-6f38cfdd.js",
+    "file": "start-e19fb62c.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_vendor-8982b92d.js",
-      "_singletons-d1fb5791.js"
+      "_vendor-3fd64a17.js"
     ],
     "dynamicImports": [
       "src/routes/__layout.svelte",
       "src/routes/__error.svelte",
-      "src/routes/index.svelte",
-      "src/routes/search/__layout.svelte",
-      "src/routes/search/index.svelte",
-      "src/routes/search/[question].svelte",
-      "src/routes/wordle/index.svelte",
-      "src/routes/annat.svelte"
+      "src/routes/index.svelte"
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-1e664954.js",
+    "file": "pages/__layout.svelte-6d13ecb1.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-8982b92d.js"
+      "_vendor-3fd64a17.js"
     ],
     "css": [
-      "assets/pages/__layout.svelte-c9df143a.css"
+      "assets/pages/__layout.svelte-b7d7706f.css"
     ]
   },
   "src/routes/__error.svelte": {
-    "file": "pages/__error.svelte-ea880c40.js",
+    "file": "pages/__error.svelte-2d30a3ef.js",
     "src": "src/routes/__error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-8982b92d.js"
+      "_vendor-3fd64a17.js"
     ],
     "css": [
       "assets/pages/__error.svelte-1d3f32eb.css"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-85e6f115.js",
+    "file": "pages/index.svelte-9c9d5400.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-8982b92d.js"
-    ]
-  },
-  "src/routes/search/__layout.svelte": {
-    "file": "pages/search/__layout.svelte-b2df1d46.js",
-    "src": "src/routes/search/__layout.svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8982b92d.js",
-      "_singletons-d1fb5791.js"
+      "_vendor-3fd64a17.js"
     ],
     "css": [
-      "assets/pages/search/__layout.svelte-cf336199.css"
+      "assets/pages/index.svelte-c0bed9d9.css"
     ]
   },
-  "src/routes/search/index.svelte": {
-    "file": "pages/search/index.svelte-7bfca4d5.js",
-    "src": "src/routes/search/index.svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8982b92d.js"
-    ]
-  },
-  "src/routes/search/[question].svelte": {
-    "file": "pages/search/_question_.svelte-54882fb0.js",
-    "src": "src/routes/search/[question].svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8982b92d.js"
-    ],
-    "css": [
-      "assets/pages/search/_question_.svelte-bf12c129.css"
-    ]
-  },
-  "src/routes/wordle/index.svelte": {
-    "file": "pages/wordle/index.svelte-d25a35ca.js",
-    "src": "src/routes/wordle/index.svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8982b92d.js"
-    ],
-    "css": [
-      "assets/pages/wordle/index.svelte-217eb7ac.css"
-    ]
-  },
-  "src/routes/annat.svelte": {
-    "file": "pages/annat.svelte-1b9674e5.js",
-    "src": "src/routes/annat.svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8982b92d.js"
-    ]
-  },
-  "_vendor-8982b92d.js": {
-    "file": "chunks/vendor-8982b92d.js"
-  },
-  "_singletons-d1fb5791.js": {
-    "file": "chunks/singletons-d1fb5791.js"
+  "_vendor-3fd64a17.js": {
+    "file": "chunks/vendor-3fd64a17.js"
   }
 }
