--- a/docs/_app/manifest.json
+++ b/docs/_app/manifest.json
@@ -1,115 +1,74 @@
 {
   ".svelte-kit/runtime/client/start.js": {
-    "file": "start-818bc9a5.js",
+    "file": "start-c25ac6ce.js",
     "src": ".svelte-kit/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_vendor-8982b92d.js",
-      "_singletons-d1fb5791.js"
+      "_vendor-e5bf3886.js"
     ],
     "dynamicImports": [
       "src/routes/__layout.svelte",
       "src/routes/__error.svelte",
       "src/routes/index.svelte",
-      "src/routes/search/__layout.svelte",
-      "src/routes/search/index.svelte",
-      "src/routes/search/[question].svelte",
-      "src/routes/wordle/index.svelte",
-      "src/routes/annat.svelte"
+      "src/routes/Instructions/index.svelte",
+      "src/routes/Board/index.svelte"
     ]
   },
   "src/routes/__layout.svelte": {
-    "file": "pages/__layout.svelte-54a6da3e.js",
+    "file": "pages/__layout.svelte-a55ac907.js",
     "src": "src/routes/__layout.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-8982b92d.js"
+      "_vendor-e5bf3886.js"
     ],
     "css": [
-      "assets/pages/__layout.svelte-46d0be0d.css"
+      "assets/pages/__layout.svelte-08238bbc.css"
     ]
   },
   "src/routes/__error.svelte": {
-    "file": "pages/__error.svelte-436a59eb.js",
+    "file": "pages/__error.svelte-39cf42d7.js",
     "src": "src/routes/__error.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-8982b92d.js"
+      "_vendor-e5bf3886.js"
     ],
     "css": [
       "assets/pages/__error.svelte-1d3f32eb.css"
     ]
   },
   "src/routes/index.svelte": {
-    "file": "pages/index.svelte-f7ef12fe.js",
+    "file": "pages/index.svelte-c9d1d09d.js",
     "src": "src/routes/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-8982b92d.js"
-    ]
-  },
-  "src/routes/search/__layout.svelte": {
-    "file": "pages/search/__layout.svelte-b22df695.js",
-    "src": "src/routes/search/__layout.svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8982b92d.js",
-      "_singletons-d1fb5791.js"
+      "_vendor-e5bf3886.js"
     ],
     "css": [
-      "assets/pages/search/__layout.svelte-cf336199.css"
+      "assets/pages/index.svelte-349d06e8.css"
     ]
   },
-  "src/routes/search/index.svelte": {
-    "file": "pages/search/index.svelte-31d8fb32.js",
-    "src": "src/routes/search/index.svelte",
+  "src/routes/Instructions/index.svelte": {
+    "file": "pages/Instructions/index.svelte-e07f4784.js",
+    "src": "src/routes/Instructions/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-8982b92d.js"
+      "_vendor-e5bf3886.js"
     ]
   },
-  "src/routes/search/[question].svelte": {
-    "file": "pages/search/_question_.svelte-7d564c0d.js",
-    "src": "src/routes/search/[question].svelte",
+  "src/routes/Board/index.svelte": {
+    "file": "pages/Board/index.svelte-6b7aed78.js",
+    "src": "src/routes/Board/index.svelte",
     "isEntry": true,
     "isDynamicEntry": true,
     "imports": [
-      "_vendor-8982b92d.js"
-    ],
-    "css": [
-      "assets/pages/search/_question_.svelte-bf12c129.css"
+      "_vendor-e5bf3886.js"
     ]
   },
-  "src/routes/wordle/index.svelte": {
-    "file": "pages/wordle/index.svelte-c6eb36d5.js",
-    "src": "src/routes/wordle/index.svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8982b92d.js"
-    ],
-    "css": [
-      "assets/pages/wordle/index.svelte-217eb7ac.css"
-    ]
-  },
-  "src/routes/annat.svelte": {
-    "file": "pages/annat.svelte-80ef88f7.js",
-    "src": "src/routes/annat.svelte",
-    "isEntry": true,
-    "isDynamicEntry": true,
-    "imports": [
-      "_vendor-8982b92d.js"
-    ]
-  },
-  "_vendor-8982b92d.js": {
-    "file": "chunks/vendor-8982b92d.js"
-  },
-  "_singletons-d1fb5791.js": {
-    "file": "chunks/singletons-d1fb5791.js"
+  "_vendor-e5bf3886.js": {
+    "file": "chunks/vendor-e5bf3886.js"
   }
 }
